Resolves: tdf#90384 queue_resize needs to Invalidate the optimal cache size

but the PanelLayout didn't

Change-Id: I38a8975f1488fa2a2ffe91b66745e1a1c6c48a28